--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "java.completion.enabled": false,
-    "java.autobuild.enabled" : false,
-    "java.codeGeneration" : false,
+    "java.completion.enabled": true,
+    "java.autobuild.enabled": false,
+    "java.codeGeneration": false,
     "java.errors.incompleteClasspath.severity": "ignore",
-    "java.validate.enable": false
+    "java.validate.enable": true,
+    "java.dependency.packagePresentation": "hierarchical"
 }
